--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -3,6 +3,8 @@
 <html>
 <head>
   <title>Welcome/login</title>
+  <link rel="stylesheet" type="text/css" href="/css/mapstyle.css">
+  <link rel="stylesheet" type="text/css" href="/css/semantic/dist/semantic.css">
 </head>
 <body>
   <header>
