added Heroku files

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,4 @@
-<h1>Welcome to Dashboard</h1>
+<h1>Welcome User</h1>
 <p>Please click on the Red <span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Icon.</p>
 <div id="main">
   <div id="map"></div>
