--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Welcome/login</title>
+  <title>GeoTracker</title>
   <link rel="stylesheet" type="text/css" href="/css/mapstyle.css">
   <link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="/css/sticky-footer.css">
