--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -119,7 +119,8 @@
     $.post('/', emailObject, function(result) {
       console.log("Server sent data back..");
     });
-
+    alert("Message Sent");
+    $("#textbox").val('');
   }
 </script>
 <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
