--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,16 @@
-<h2>Agent Login</h2>
-<form method="post" action="/users/login">
-  <p><label>Agent ID: </label><input type="text" name="username" placeholder="Agent ID"></p>
-  <p><label>Password: </label><input type="password" name="password" placeholder="Password"></p>
-  <p><input type="submit" value="Login"></p>
-</form>
+
+<div class="container container-table">
+    <div class="row vertical-center-row">
+        <div class="text-center col-md-4 col-md-offset-4">
+          <h2>User Login</h2>
+          <div class="panel panel-default">
+            <div class="panel-body">
+              <form method="post" class="form" action="/users/login">
+                <div class="form-group"><label>UserID</label><input class="form-control" type="text" name="username" placeholder="Agent ID"></div>
+                <div class="form-group"><label>Password</label><input class="form-control" type="password" name="password" placeholder="Password"></div>
+                <div class="form-group"><input type="submit" class="btn btn-primary btn-lg btn-block" value="Login"></div>
+              </form>
+            </div>
+          </div>
+        </div>
+    </div>
