--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,14 +1,23 @@
-<h2>Agent Registration</h2>
-{{#if errors}}
-  {{#each errors}}
-    <h3>{{msg}}</h3>
-  {{/each}}
-{{/if}}
-<form method="post" action="/users/register">
-  <p><label>Agent Name: </label><input type="text" name="agent_name"></p>
-  <p><label>Agent ID: </label><input type="text" name="agent_id"></p>
-  <p><label>Agent E-mail: </label><input type="text" name="agent_email"></p>
-  <p><label>Password: </label><input type="password" name="password1"></p>
-  <p><label>Confirm Password: </label><input type="password" name="password2"></p>
-  <p><input type="submit" value="Login"></p>
-</form>
+<div class="container container-table">
+    <div class="row vertical-center-row">
+        <div class="text-center col-md-4 col-md-offset-4">
+          <h2>User Registration</h2>
+          <div class="panel panel-default">
+            <div class="panel-body">
+              {{#if errors}}
+                {{#each errors}}
+                  <div class="alert alert-danger" role="alert">{{msg}}</div>
+                {{/each}}
+              {{/if}}
+              <form method="post" action="/users/register">
+                <div class="form-group"><label>Full Name</label><input class="form-control" type="text" name="agent_name"></div>
+                <div class="form-group"><label>UserID</label><input class="form-control" type="text" name="agent_id"></div>
+                <div class="form-group"><label>E-mail Address</label><input class="form-control" type="text" name="agent_email"></div>
+                <div class="form-group"><label>Password</label><input class="form-control" type="password" name="password1"></div>
+                <div class="form-group"><label>Confirm Password</label><input class="form-control" type="password" name="password2"></div>
+                <p><input type="submit" class="btn btn-primary btn-lg btn-block" value="Login"></p>
+              </form>
+            </div>
+          </div>
+        </div>
+    </div>
