--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,7 +6,7 @@
           <div class="panel panel-default">
             <div class="panel-body">
               <form method="post" class="form" action="/users/login">
-                <div class="form-group"><label>UserID</label><input class="form-control" type="text" name="username" placeholder="Agent ID"></div>
+                <div class="form-group"><label>UserID</label><input class="form-control" type="text" name="username" placeholder="User ID"></div>
                 <div class="form-group"><label>Password</label><input class="form-control" type="password" name="password" placeholder="Password"></div>
                 <div class="form-group"><input type="submit" class="btn btn-primary btn-lg btn-block" value="Login"></div>
               </form>
