--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -69,5 +69,7 @@
   <!--- Footer end --->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="/js/bootstrap.min.js"></script>
+  <script src="/js/mapsData.js"></script>
+  <script src="/js/googleMaps.js"></script>
 </body>
 </html>
