--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -27,7 +27,7 @@
           <ul class="nav navbar-nav">
             {{#if user}}
             <li><a href="/">Dashboard</a></li>
-            <li><a href="/users/sentlocations">Sent Locations</a></li>
+            <!--<li><a href="/users/sentlocations">Sent Locations</a></li>-->
             <li><a href="/users/logout">Logout</a></li>
             {{else}}
             <li><a href="/users/login">Login</a></li>
