Added recent location tab

--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -27,6 +27,7 @@
           <ul class="nav navbar-nav">
             {{#if user}}
             <li><a href="/">Dashboard</a></li>
+            <li><a href="/users/sentlocations">Sent Locations</a></li>
             <li><a href="/users/logout">Logout</a></li>
             {{else}}
             <li><a href="/users/login">Login</a></li>
@@ -70,5 +71,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="/js/bootstrap.min.js"></script>
   <script src="/js/googleMaps.js"></script>
+  
 </body>
 </html>
